--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: 物理のためのページ
-email: koichi0907france [at] gmail.com
+# email: koichi0907france [at] gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   I wish it's gonna be an exciting site to visit!
 baseurl: "" # the subpath of your site, e.g. /blog
